--- a/src/html/bin.html
+++ b/src/html/bin.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html>
-<head> 
-    <meta charset="utf-8"> 
-    <script type="text/javascript" src="/js/decodeGip.js"></script>
-    <script type="text/javascript" src="/js/decodeGpp.js"></script>
-    <title>gpp</title> 
+<head>
+    <meta charset="utf-8">
+    <title>gp</title>
 </head>
 <body>
 
@@ -14,9 +12,7 @@
 
 配置文件：<input type="file" id="file1" accept=".json" />
 
-gip图片文件：<input type="file" id="file2" accept=".gip" />
-
-gpp图片文件：<input type="file" id="file2" accept=".gpp" />
+bin图片文件：<input type="file" id="file2" accept=".bin" />
 
 <script type="text/javascript">
     let config=null;
@@ -34,6 +30,7 @@ gpp图片文件：<input type="file" id="file2" accept=".gpp" />
         if(config==null){
             window.alert('请先上传配置文件！')
         }else{
+            let time=new Date();
             let file = file2.files[0];
             let c=document.getElementById("myCanvas");
             let ctx=c.getContext("2d");
@@ -41,24 +38,18 @@ gpp图片文件：<input type="file" id="file2" accept=".gpp" />
             let reader = new FileReader();
             reader.readAsArrayBuffer(file);
             reader.onload = function () {
-                let time=new Date();
+                console.log(new Date()-time)
                 let array = new Uint8Array(reader.result);
-                let grayArrays=decodeGip(array,config)
-                console.log('load:',new Date()-time)
                 let imgData=ctx.createImageData(config['outWidth'],config['outHeight']);
-                for (let i=0;i<config['outHeight'];i++)
+                for (let i=0;i<imgData.data.length;i+=4)
                 {
-                    for (let j=0;j<config['outWidth'];j++)
-                    {
-                        let color=grayArrays[i][j]*255/config['colorSize']
-                        imgData.data[j*4+0+i*config['outWidth']*4]=color;
-                        imgData.data[j*4+1+i*config['outWidth']*4]=color;
-                        imgData.data[j*4+2+i*config['outWidth']*4]=color;
-                        imgData.data[j*4+3+i*config['outWidth']*4]=255;
-                    }
+                    let color=array[i/4]*255/config['colorSize']
+                    imgData.data[i+0]=color;
+                    imgData.data[i+1]=color;
+                    imgData.data[i+2]=color;
+                    imgData.data[i+3]=255;
                 }
                 ctx.putImageData(imgData,0,0);
-                console.log('draw:',new Date()-time)
             }
         }
     }
