--- a/src/html/gbp.html
+++ b/src/html/gbp.html
@@ -2,8 +2,10 @@
 <html>
 <head> 
     <meta charset="utf-8"> 
-    <script type="text/javascript" src="/js/decodeGp.js"></script>
-    <title>gp</title> 
+    <script type="text/javascript" src="/js/decodeGip.js"></script>
+    <script type="text/javascript" src="/js/decodeGpp.js"></script>
+    <script type="text/javascript" src="/js/decodeGbp.js"></script>
+    <title>gbp</title> 
 </head>
 <body>
 
@@ -13,7 +15,11 @@
 
 配置文件：<input type="file" id="file1" accept=".json" />
 
-gp图片文件：<input type="file" id="file2" accept=".gbp" />
+gip图片文件：<input type="file" id="file2" accept=".gip" />
+
+gpp图片文件：<input type="file" id="file2" accept=".gpp" />
+
+gbp图片文件：<input type="file" id="file2" accept=".gbp" />
 
 <script type="text/javascript">
     let config=null;
