--- a/src/html/gv.html
+++ b/src/html/gv.html
@@ -3,6 +3,9 @@
 <head> 
     <meta charset="utf-8"> 
     <script type="text/javascript" src="/js/decodeGv.js"></script>
+    <script type="text/javascript" src="/js/decodeGip.js"></script>
+    <script type="text/javascript" src="/js/decodeGpp.js"></script>
+    <script type="text/javascript" src="/js/decodeGbp.js"></script>
     <title>gp</title> 
 </head>
 <body>
@@ -13,7 +16,7 @@
 
 配置文件：<input type="file" id="file1" accept=".json" />
 
-gp图片文件：<input type="file" id="file2" accept=".gp" />
+gv视频文件：<input type="file" id="file2" accept=".gv" />
 
 <script type="text/javascript">
     let config=null;
