--- a/src/html/gip.html
+++ b/src/html/gip.html
@@ -2,7 +2,7 @@
 <html>
 <head> 
     <meta charset="utf-8"> 
-    <script type="text/javascript" src="/js/decodeGp.js"></script>
+    <script type="text/javascript" src="/js/decodeGip.js"></script>
     <title>gip</title> 
 </head>
 <body>
@@ -13,7 +13,7 @@
 
 配置文件：<input type="file" id="file1" accept=".json" />
 
-gp图片文件：<input type="file" id="file2" accept=".gip" />
+gip图片文件：<input type="file" id="file2" accept=".gip" />
 
 <script type="text/javascript">
     let config=null;
