--- a/src/html/gpp.html
+++ b/src/html/gpp.html
@@ -2,7 +2,6 @@
 <html>
 <head> 
     <meta charset="utf-8"> 
-    <script type="text/javascript" src="/js/decodeGip.js"></script>
     <script type="text/javascript" src="/js/decodeGpp.js"></script>
     <title>gpp</title> 
 </head>
@@ -14,12 +13,13 @@
 
 配置文件：<input type="file" id="file1" accept=".json" />
 
-gip图片文件：<input type="file" id="file2" accept=".gip" />
+bin图片文件：<input type="file" id="file2" accept=".bin" />
 
-gpp图片文件：<input type="file" id="file2" accept=".gpp" />
+gpp图片文件：<input type="file" id="file3" accept=".gpp" />
 
 <script type="text/javascript">
     let config=null;
+    let binArray=null;
     let file1 = document.getElementById('file1');
     file1.onchange = function () {
         let file = file1.files[0];
@@ -31,8 +31,24 @@ gpp图片文件：<input type="file" id="file2" accept=".gpp" />
     }
     let file2 = document.getElementById('file2');
     file2.onchange = function () {
+        let file = file1.files[0];
+        let reader = new FileReader();
+        reader.readAsArrayBuffer(file);
+        reader.onload = function () {
+            let byteArray = new Uint8Array(reader.result);
+            let grayArrays=[]
+            for (let i=0;i<config['outHeight'];i++) {
+                grayArrays.push(byteArray.slice(i*config['outWidth'],(i+1)*config['outWidth'])
+            }
+            binArray=grayArrays
+        }
+    }
+    let file3 = document.getElementById('file3');
+    file3.onchange = function () {
         if(config==null){
             window.alert('请先上传配置文件！')
+        }else if(binArray==null){
+            window.alert('请先上传bin文件！')
         }else{
             let file = file2.files[0];
             let c=document.getElementById("myCanvas");
@@ -42,8 +58,8 @@ gpp图片文件：<input type="file" id="file2" accept=".gpp" />
             reader.readAsArrayBuffer(file);
             reader.onload = function () {
                 let time=new Date();
-                let array = new Uint8Array(reader.result);
-                let grayArrays=decodeGip(array,config)
+                let byteArray = new Uint8Array(reader.result);
+                let grayArrays=decodeGpp(binArray,byteArray,config)
                 console.log('load:',new Date()-time)
                 let imgData=ctx.createImageData(config['outWidth'],config['outHeight']);
                 for (let i=0;i<config['outHeight'];i++)
