--- a/src/html/gip.html
+++ b/src/html/gip.html
@@ -39,19 +39,20 @@ gip图片文件：<input type="file" id="file2" accept=".gip" />
             reader.readAsArrayBuffer(file);
             reader.onload = function () {
                 let time=new Date();
-                let array = new Uint8Array(reader.result);
-                let grayArrays=decodeGip(array,config)
+                let binArray = new Uint8Array(reader.result);
                 console.log('load:',new Date()-time)
+                let grayArray=decodeGip(binArray,config)
+                console.log('decode:',new Date()-time)
                 let imgData=ctx.createImageData(config['outWidth'],config['outHeight']);
-                for (let i=0;i<config['outHeight'];i++)
+                for (let i=0;i<config['outWidth'];i++)
                 {
-                    for (let j=0;j<config['outWidth'];j++)
+                    for (let j=0;j<config['outHeight'];j++)
                     {
-                        let color=grayArrays[i][j]*255/config['colorSize']
-                        imgData.data[j*4+0+i*config['outWidth']*4]=color;
-                        imgData.data[j*4+1+i*config['outWidth']*4]=color;
-                        imgData.data[j*4+2+i*config['outWidth']*4]=color;
-                        imgData.data[j*4+3+i*config['outWidth']*4]=255;
+                        let color=grayArray[i][j]*255/config['colorSize']
+                        imgData.data[i*4+0+j*config['outWidth']*4]=color;
+                        imgData.data[i*4+1+j*config['outWidth']*4]=color;
+                        imgData.data[i*4+2+j*config['outWidth']*4]=color;
+                        imgData.data[i*4+3+j*config['outWidth']*4]=255;
                     }
                 }
                 ctx.putImageData(imgData,0,0);
