--- a/src/html/gv.html
+++ b/src/html/gv.html
@@ -5,6 +5,10 @@
     <script type="text/javascript" src="/js/decodeGv.js"></script>
     <script type="text/javascript" src="/js/decodeGip.js"></script>
     <script type="text/javascript" src="/js/decodeGbp.js"></script>
+    <script type="text/javascript" src="/js/playGrayVideo.js"></script>
+    <script type="text/javascript" src="/js/jzip.min.js"></script>
+    <script type="text/javascript" src="/js/jzip-utils.min.js"></script>
+    <script type="text/javascript" src="/js/jquery-3.5.1.min.js"></script>
     <title>gp</title> 
 </head>
 <body>
